fixed alignment of logo on front page
everytime the admins get bored, they change the logo. this replaces our
default snoo logo and screw the vertical alignment. this commit added
text 'front page' on the header to make the logo vertically aligned again.

--- a/css/userstyle.css
+++ b/css/userstyle.css
@@ -1149,12 +1149,12 @@
     margin: 0 10px 0 20px;
   }
 
-  #header-bottom-left > .pagename:last-child:after {
+  #header-bottom-left > .pagename:last-child:after, .front-page #header-bottom-left > #header-img-a:last-child:after {
     content: '';
     height: 32px;
   }
 
-  .pagename:last-child:after,
+  .pagename:last-child:after, .front-page #header-img-a:last-child:after,
   #header .tabmenu {
     display: block;
     margin: 0;
@@ -1266,7 +1266,7 @@
     line-height: 1em;
   }
 
-  .pagename {
+  .pagename, .front-page #header-img-a {
     color: #b7b7b7;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
     font-variant: normal;
@@ -1274,18 +1274,18 @@
     font-weight: normal;
     vertical-align: middle;
   }
-  .pagename:before {
+  .pagename:before, .front-page #header-img-a:before {
     content: '';
     display: inline-block;
     vertical-align: middle;
     height: 89px;
     width: 3px;
   }
-  .pagename.redditname > a {
+  .pagename.redditname > a, .front-page .redditname#header-img-a > a {
     display: inline;
     color: inherit;
   }
-  .pagename.redditname > a:hover {
+  .pagename.redditname > a:hover, .front-page .redditname#header-img-a > a:hover {
     color: #eaeaea;
     text-decoration: none;
   }
@@ -2313,17 +2313,28 @@
   }
 
   #header-img-a {
-    max-width: 300px;
     overflow: hidden;
   }
   #header-img-a > #header-img {
     max-height: 89px !important;
     width: auto !important;
+    max-width: 300px !important;
   }
 
-  body.with-listing-chooser #header .pagename {
+  body.with-listing-chooser #header .pagename, body.with-listing-chooser #header .front-page #header-img-a, .front-page body.with-listing-chooser #header #header-img-a {
     position: static;
     margin-left: 0;
+  }
+
+  .front-page #header-img-a {
+    margin: 0 0 0 17px;
+  }
+  .front-page #header-img-a::after {
+    content: 'front page';
+  }
+  .front-page #header-img {
+    vertical-align: middle;
+    margin: 0 20px 6px 0;
   }
 
   .organic-listing .nextprev {
